--- a/public/config.json
+++ b/public/config.json
@@ -4,7 +4,7 @@
     "height": 1024
   },
   "frame": {
-    "image": "twibbon.png",
+    "image": "/twibbon.png",
     "x": 0,
     "y": 0,
     "width": 1024,
